test/sema/typeck/literal/float-explicit-suffix.dora
fn expect_float32(): Float32 { 1.0f64 }
fn expect_float64(): Float64 { 2.0f32 }
